--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "drupal/core": "^8",
     "contentacms/contenta_jsonapi": "dev-8.x-1.x",
     "drupal/simple_block": "^1.0@beta",
-    "drush/drush": "~8",
+    "drush/drush": "dev-master",
     "rvtraveller/qs-composer-installer": "^1.1",
     "webflo/drupal-core-strict": "^8"
   },
